test first commit

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <div class="col-md-12 col-sm-12 col-xs-12">
                                     <div class="testimonials">
                                         <div class="active item">
-                                          <blockquote><p>Denim you probably haven't heard of. Lorem ipsum dolor met consectetur adipisicing sit amet, consectetur adipisicing elit, of them jean shorts sed magna aliqua. Lorem ipsum dolor met.</p></blockquote>
+                                          <blockquote><p>Je m’appelle Amine Bounif, j’ai 20 ans. Élève ingénieur en quatrième année à l’Ecole Centrale de Lille, formation IG2I option Génie Informatique. J’ai toujours été interessé par les technologies informatiques et particulièrement le développement web. Après l’obtention de mon diplôme d’ingénieur, je souhaiterais travailler au sein d’une SSII et acquérir ainsi les compétences d’un chef de projet.</p></blockquote>
                                           <div class="carousel-info">
                                             <img alt="" src="img/user1.JPG" class="pull-left">
                                             <div class="pull-left">
@@ -237,7 +237,8 @@
                                 <div class="col-md-12 col-sm-12 col-xs-12">
                                     <div class="testimonials">
                                         <div class="active item">
-                                          <blockquote><p>Denim you probably haven't heard of. Lorem ipsum dolor met consectetur adipisicing sit amet, consectetur adipisicing elit, of them jean shorts sed magna aliqua. Lorem ipsum dolor met.</p></blockquote>
+                                          <blockquote><p>J’ai 22 ans, et suis en 4e année à l’IG2I, option informatique. Mon parcours est le suivant : Bac STI < DUT Informatique < Classe préparatoire ATS < IG2I (Ecole d’ingénieur en informatique, département de Centrale Lille).
+                                          J’aimerai plus tard travailler dans le département informatique d’une multinationale, attaché à un poste à responsabilité afin d’exploiter au maximum mon potentiel de travail, et dans le meilleur des cas, contribuer à d’importantes recherches pour le développement de nouvelles technologies.</p></blockquote>
                                           <div class="carousel-info">
                                             <img alt="" src="img/user2.JPG" class="pull-left">
                                             <div class="pull-left">
