--- a/index.html
+++ b/index.html
@@ -381,7 +381,29 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Contact Section</h1>
+                    <div class="container">
+                        <div class="heading">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 adress-element ">
+                                <i class="fa fa-home fa-2x"></i>
+                                <h3>Adresse</h3>
+                                <span class="font-l">103 rue Eugène Bar, appt 3</span><br/>
+                                <span class="font-l">62300 Lens France</span>
+                            </div>
+                            <div class="col-md-4 adress-element delay2">
+                                <i class="fa fa-comment fa-2x"></i>
+                                <h3>Mail</h3>
+                                <span class="font-l">amine.bounif@ig2i.fr</span><br/>
+                                <span class="font-l">amine.bounif@gmail.com</span>
+                            </div>
+                            <div class="col-md-4 adress-element delay4">
+                                <i class="fa fa-phone fa-2x"></i>
+                                <h3>Téléphone</h3>
+                                <span class="font-l">+33 6 18 00 19 93</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
