Plaquette ajoutée ainsi que la partie "Projet" est remplie.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                         <p>Etudiants ingénieurs - Formation IG2I de l'Ecole Centrale de Lille</p><br/>
                         <p> nous vous proposons nos services et notre savoir faire.</p>
                         </div>
-                        <a class="btn btn-primary" href="doc/"> Téléchargez notre plaquette </a>
+                        <a class="btn btn-primary" href="files/plaquette.pdf" target="_blank"> 
+                          Téléchargez notre plaquette 
+                        </a>
                         <a class="btn btn-primary" href="#contact" class="button">Contactez nous !</a>
                     </div>
                 </div>
@@ -198,10 +200,40 @@
     <!-- Projet Section -->
     <section id="projet" class="projet-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Projet Section</h1>
+            <div class="row first-part">
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <h1>CE QUE NOUS PROPOSONS</h1><br/><br/>
+                    Dans le cadre de notre formation IG2I de l’école d’ingénieur l’IG2I, nous sommes amenés à travailler dans un projet d’envergure professionnelle.<br/>
+                    <h3><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> NOS LIVRABLES</h3>
+                    <p>Pour ce projet nous rédigerons, le cahier des charges, le dossier de spécifications générales, une étude de marché, l’estimation de la charge, du budget, du planning, et des ressources du projet réel.</p>
+                    <h3><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span> RESSOURCES</h3>
+                    <p>Nous serons huit à travailler sur ce projet, pour environ 960h de travail à votre charge.</p>
+                    <h3><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> QUALITÉ</h3>
+                    <p>Notre formation en apprentissage nous procure une expérience professionnelle qui nous permettra de travailler efficacement sur le projet que vous nous confierez. Chacun de nous a évolué dans des entreprises distinctes, qui utilisent des méthodes de travail variées. Cette diversité sera un réel avantage sur la qualité des livrables finaux.</p>
                 </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <img src="img/checklist.png" style="width:100%; height:100%;"/>
+                </div>
+            </div>
+            <div class="row grid-divider">
+              <div class="col-sm-4">
+                <div class="col-padding">
+                  <h3><i class="btn btn-primary btn-circle glyphicon glyphicon-list"></i> PERFORMANCE</h3>
+                  <p>Habitué au monde professionnel, nous nous engageons à répondre efficacement tout en respectant les délais.</p>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="col-padding">
+                  <h3><i class=" btn btn-success btn-circle glyphicon glyphicon-link"></i> FIABILITÉ</h3>
+                  <p>Ce projet s’inscrivant dans un cadre scolaire, un suivi régulier est effectué par le corps enseignant de l’école Centrale Lille. Un contact permanent avec vous sera maintenu tout au long du projet.</p>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="col-padding">
+                  <h3><i class="btn btn-info btn-circle glyphicon glyphicon-ok"></i> INNOVATION</h3>
+                  <p>Utilisations d'outils modernes et de nouvelles technologies. Nos connaissances nous permettent de vous proposer de nouvelles solutions, avec un regard innovant</p>
+                </div>
+              </div>
             </div>
         </div>
     </section>
