--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
 
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                           <!-- Indicators -->
-                          <ol class="carousel-indicators">
+                          <!-- <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                          </ol>
+                          </ol> -->
 
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner">
                             <div class="item active">
-                              <img src="img/01.png" height="500px" width="200px" alt="...">
+                              <img src="img/groupe.jpg" height="500px" width="200px" alt="...">
                               <div class="carousel-caption">
                                 <h2>Optech team</h2>
                               </div>
                             </div>
-                            <div class="item">
+                            <!-- <div class="item">
                               <img src="img/02.png" alt="...">
                               <div class="carousel-caption">
                                 <h2>Génie des systèmes avancés</h2>
@@ -111,16 +111,16 @@
                               <div class="carousel-caption">
                                 <h2>Génie des systèmes avancés</h2>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
 
                           <!-- Controls -->
-                          <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                          <!-- <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left"></span>
                           </a>
                           <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                             <span class="glyphicon glyphicon-chevron-right"></span>
-                          </a>
+                          </a> -->
                         </div>
 
                       </div>
@@ -153,7 +153,9 @@
                 <div class="col-lg-12">
                     <div class="col-lg-6">
                         <section class="isasection animate fadeInLeft" id="text1">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, 
+                            Nous sommes un groupe de 8 élèves en quatrième année d’école d’ingénieur. Ayant des parcours et des expériences différentes, nos compétences et profils sont riches et variées.<br/>
+                            Notre formation, en adéquation avec le monde de l’industrie, nous offre l’opportunité de travailler en groupe sur un projet partenaire entreprise.<br/>
+                            Notre objectif est de réaliser l’étude préliminaire d’un projet ainsi que ces spécifications amenant à la réalisation du projet. Nos domaines privilégiés sont la vision assistée par ordinateur, l’automatique, robotique ainsi que l’informatique industrielle.
                         </section>
                     </div>
                     <div class="col-lg-6">
@@ -240,7 +242,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(1)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/petnp/600x700" class="img-responsive">
+                    <img src="img/marc.JPG" class="img-responsive rotate90">
                   </div>
                   <h1>Marc Marcinkowski</h1>
                   <h2>Chef de projet</h2>
@@ -248,7 +250,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(2)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/xruzn/600x700" class="img-responsive">
+                    <img src="img/quentin.JPG" class="img-responsive">
                   </div>
                   <h1>Quentin Delrue</h1>
                   <h2>Responsable qualité</h2>
@@ -256,7 +258,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(3)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/wctme/600x700" class="img-responsive">
+                    <img src="img/amine.JPG" class="img-responsive">
                   </div>
                   <h1>Amine Bounif</h1>
                   <h2>Responsable web</h2>
@@ -264,7 +266,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(4)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/qwspg/600x700" class="img-responsive">
+                    <img src="img/victor.JPG" class="img-responsive">
                   </div>
                   <h1>Victor Vaccaro</h1>
                   <h2>Responsable web</h2>
@@ -272,7 +274,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(5)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="img/valentin.JPG" class="img-responsive" style="height: 227px;">
+                    <img src="img/valentin.JPG" class="img-responsive">
                   </div>
                   <h1>Valentin Pétré</h1>
                   <h2>Responsable design</h2>
@@ -280,7 +282,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(6)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/rxco7/600x700" class="img-responsive">
+                    <img src="img/yahya.JPG" class="img-responsive">
                   </div>
                   <h1>Yahya Arba</h1>
                   <h2>Responsable communication</h2>
@@ -288,7 +290,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(7)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/kzsjt/600x700" class="img-responsive">
+                    <img src="img/jeremie.JPG" class="img-responsive">
                   </div>
                   <h1>Jérémie Pannequin</h1>
                   <h2>Responsable logistique</h2>
@@ -296,7 +298,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4 profile">
                   <div class="img-box">
                     <div class="pointeur" onclick="setNumero(8)"><i class="fa fa-info" data-toggle="modal" data-target="#modal"></i></div>
-                    <img src="http://placemi.com/m2qx7/600x700" class="img-responsive">
+                    <img src="img/jordan.JPG" class="img-responsive">
                   </div>
                   <h1>Jordan Bonhommet</h1>
                   <h2>Responsable réalisation</h2>
